--- a/_talks/2021-06-19-talk-6.md
+++ b/_talks/2021-06-19-talk-6.md
@@ -3,7 +3,7 @@ title: "Point2color: 3D Point Cloud Colorization Using a Conditional Generative 
 collection: talks
 type: "Talk"
 permalink: /talks/2021-06-19-talk-6
-venue: "Earth Vision 2021 Oral presentation"
+venue: "CVPR Earth Vision 2021 Oral presentation"
 date: 2021-06-19
 location: "on-line"
 ---
