--- a/_talks/2021-06-19-talk-5.md
+++ b/_talks/2021-06-19-talk-5.md
@@ -9,3 +9,5 @@ location: "on-line"
 ---
 
 <script async class="speakerdeck-embed" data-id="1d332913b6a1455993fe4ed3ba435347" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Vkwwnkh_0W8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
