--- a/_talks/2021-07-15-talk-7.md
+++ b/_talks/2021-07-15-talk-7.md
@@ -9,3 +9,5 @@ location: "on-line"
 ---
 
 <script async class="speakerdeck-embed" data-id="059268c093a34246af6106c8dd199a03" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2qp9D4RL7yI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
